@@ -16,6 +16,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Collections;
 import java.util.List;
 
 @EnableWebSecurity
@@ -66,7 +67,8 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(List.of("http://localhost:8080", "http://localhost:8082", "http://localhost:8083"));
+        config.setAllowedOriginPatterns(Collections.singletonList("*"));
+//        config.setAllowedOriginPatterns(List.of("http://localhost:8080", "http://localhost:8082", "http://localhost:8083", "http://localhost:3000"));
         config.addAllowedHeader("*");
         config.addAllowedMethod("OPTIONS");
         config.addAllowedMethod("GET");
